--- a/composer.json
+++ b/composer.json
@@ -68,6 +68,7 @@
     "require-dev": {
         "symfony/maker-bundle": "^1.9",
         "symfony/test-pack": "^1.0",
+        "symfony/var-dumper": "4.2.*",
         "symfony/web-server-bundle": "4.2.*"
     }
 }
