--- a/package.json
+++ b/package.json
@@ -13,5 +13,14 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.6.1",
+        "bootstrap": "3.3.6",
+        "expose-loader": "^0.7.5",
+        "jquery": "^3.3.1",
+        "owl.carousel": "^2.3.4",
+        "popper.js": "^1.14.6",
+        "smoothscroll": "^0.4.0"
     }
 }
