--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.6.1",
         "bootstrap": "3.3.6",
         "expose-loader": "^0.7.5",
+        "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
         "owl.carousel": "^2.3.4",
         "popper.js": "^1.14.6",
