Try to add FosJSRouting

--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,6 +2,7 @@ framework:
     templating:
         engines: ['twig', 'php']
     translator: ~
+    validation: { enabled: true, enable_annotations: true }
     assets:
 #        json_manifest_path: '%kernel.root_dir%/public/build/'
     secret: '%env(APP_SECRET)%'
