--- a/package.json
+++ b/package.json
@@ -15,10 +15,22 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap": "3.3.6",
+        "@font/nunito": "^1.0.3",
+        "@fortawesome/fontawesome-free": "^5.6.3",
+        "axios": "^0.18.0",
+        "bootstrap": "^4.2.1",
+        "bootstrap-datepicker": "^1.8.0",
+        "bootstrap-sass": "^3.3.6",
+        "chart.js": "^2.7.3",
         "expose-loader": "^0.7.5",
         "font-awesome": "^4.7.0",
+        "holderjs": "^2.9.4",
         "jquery": "^3.3.1",
+        "jquery-form": "^4.2.2",
+        "jquery-scroll-lock": "^3.1.3",
+        "jquery.scrollbar": "^0.2.11",
+        "node-sass": "^4.11.0",
+        "nouislider": "^11.1.0",
         "owl.carousel": "^2.3.4",
         "popper.js": "^1.14.6",
         "smoothscroll": "^0.4.0"
